fix: align left and duplicate style for buttons

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,7 +52,8 @@
   margin: 30px 0 10px;
 }
 
-#theme-toggle {
+#theme-toggle,
+#lang-selector {
   width: 44px;
   height: 44px;
   border-radius: 12px;
@@ -84,7 +85,7 @@
 .footer-buttons {
   display: flex;
   gap: 20px;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   margin: 20px;
   padding: 0;
@@ -92,10 +93,6 @@
 
   li {
     margin: 0;
-  }
-
-  &:hover {
-    background: white;
   }
 
 }
